--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_auth: ^3.0.2
   shared_preferences: ^2.0.7
   image_picker: ^0.8.3+3
+  numberpicker: ^2.1.1
+  firebase_storage: ^10.0.3
 
 dev_dependencies:
   flutter_test:
