--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   image_picker: ^0.8.3+3
   numberpicker: ^2.1.1
   firebase_storage: ^10.0.3
+  flutter_lints: ^1.0.4
 
 dev_dependencies:
   flutter_test:
