--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   numberpicker: ^2.1.1
   firebase_storage: ^10.0.3
   flutter_lints: ^1.0.4
+  flutter_slidable: ^0.6.0
+  multi_image_picker2: ^5.0.2
+  english_words: ^4.0.0
 
 dev_dependencies:
   flutter_test:
